{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 50,
  "lineage": "2c22507f-890e-196b-7a54-4466358b6406",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lb-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].provider",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0136ddddd07f0584f",
            "arn": "arn:aws:ec2:eu-west-1:331472312345:instance/i-009f98e2d9e6485ac",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-009f98e2d9e6485ac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "aravind",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a93e74678a1ca930",
            "private_dns": "ip-192-168-0-6.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.6",
            "public_dns": "ec2-3-250-206-208.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.250.206.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dd2b2d4a1fe60726",
                "volume_size": 25,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02fa96ca117435842",
            "tags": {
              "Name": "tf-lb-node",
              "OwnerContact": "aravind.ar@mongodb.com",
              "WhatIsThis": "https://wiki.corp.mongodb.com/display/SEC/Auto+Tagging",
              "creationTime": "2023-08-20T07:20:42Z",
              "creator": "aravind.ar@mongodb.com",
              "creatorIAMRole": "AWSReservedSSO_Services.User_c183f8d6586405a0",
              "custodian-owner": "aravind.ar@mongodb.com",
              "expire-on": "2023-08-22"
            },
            "tags_all": {
              "Name": "tf-lb-node",
              "OwnerContact": "aravind.ar@mongodb.com",
              "WhatIsThis": "https://wiki.corp.mongodb.com/display/SEC/Auto+Tagging",
              "creationTime": "2023-08-20T07:20:42Z",
              "creator": "aravind.ar@mongodb.com",
              "creatorIAMRole": "AWSReservedSSO_Services.User_c183f8d6586405a0",
              "custodian-owner": "aravind.ar@mongodb.com",
              "expire-on": "2023-08-22"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-047cac52fac803def"
            ]
          },
          "dependencies": [
            "aws_instance.om-node",
            "aws_security_group.om-sec-grp",
            "aws_subnet.om-vpc-subnet",
            "aws_vpc.om-vpc",
            "data.aws_ami.om-ami",
            "data.aws_availability_zones.om-vpc-azs",
            "data.aws_key_pair.om-key-pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "om-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].provider",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0136ddddd07f0584f",
            "arn": "arn:aws:ec2:eu-west-1:331472312345:instance/i-0bdfdf4ab54ba0cfa",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdb",
                "encrypted": false,
                "iops": 1000,
                "tags": {
                  "name": "xvdb"
                },
                "throughput": 0,
                "volume_id": "vol-0382605411ecd98ba",
                "volume_size": 25,
                "volume_type": "io2"
              },
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdc",
                "encrypted": false,
                "iops": 1000,
                "tags": {
                  "name": "xvdc"
                },
                "throughput": 0,
                "volume_id": "vol-0aaf30819fa241763",
                "volume_size": 25,
                "volume_type": "io2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bdfdf4ab54ba0cfa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "r5.large",
            "ipv6_address_count": 0,
            "key_name": "aravind",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08fdef82fd9226689",
            "private_dns": "ip-192-168-0-11.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.11",
            "public_dns": "ec2-54-75-49-18.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.75.49.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-094a1a1229c52948b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02fa96ca117435842",
            "tags": {
              "Name": "tf-om-node-0",
              "OwnerContact": "aravind.ar@mongodb.com",
              "WhatIsThis": "https://wiki.corp.mongodb.com/display/SEC/Auto+Tagging",
              "creationTime": "2023-08-20T07:20:26Z",
              "creator": "aravind.ar@mongodb.com",
              "creatorIAMRole": "AWSReservedSSO_Services.User_c183f8d6586405a0",
              "custodian-owner": "aravind.ar@mongodb.com",
              "expire-on": "2023-08-22"
            },
            "tags_all": {
              "Name": "tf-om-node-0",
              "OwnerContact": "aravind.ar@mongodb.com",
              "WhatIsThis": "https://wiki.corp.mongodb.com/display/SEC/Auto+Tagging",
              "creationTime": "2023-08-20T07:20:26Z",
              "creator": "aravind.ar@mongodb.com",
              "creatorIAMRole": "AWSReservedSSO_Services.User_c183f8d6586405a0",
              "custodian-owner": "aravind.ar@mongodb.com",
              "expire-on": "2023-08-22"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-047cac52fac803def"
            ]
          },
          "dependencies": [
            "aws_security_group.om-sec-grp",
            "aws_subnet.om-vpc-subnet",
            "aws_vpc.om-vpc",
            "data.aws_ami.om-ami",
            "data.aws_availability_zones.om-vpc-azs",
            "data.aws_key_pair.om-key-pair"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0136ddddd07f0584f",
            "arn": "arn:aws:ec2:eu-west-1:331472312345:instance/i-04a21fd267304d264",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdb",
                "encrypted": false,
                "iops": 1000,
                "tags": {
                  "name": "xvdb"
                },
                "throughput": 0,
                "volume_id": "vol-0b3412ae2235fc564",
                "volume_size": 25,
                "volume_type": "io2"
              },
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdc",
                "encrypted": false,
                "iops": 1000,
                "tags": {
                  "name": "xvdc"
                },
                "throughput": 0,
                "volume_id": "vol-07bbfa11b96afd8a3",
                "volume_size": 25,
                "volume_type": "io2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a21fd267304d264",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "r5.large",
            "ipv6_address_count": 0,
            "key_name": "aravind",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b285654a9affbba7",
            "private_dns": "ip-192-168-0-24.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.24",
            "public_dns": "ec2-34-242-180-139.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.242.180.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05cfcea74f5765039",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0582c4c9bcedd327c",
            "tags": {
              "Name": "tf-om-node-1",
              "OwnerContact": "aravind.ar@mongodb.com",
              "WhatIsThis": "https://wiki.corp.mongodb.com/display/SEC/Auto+Tagging",
              "creationTime": "2023-08-20T07:20:27Z",
              "creator": "aravind.ar@mongodb.com",
              "creatorIAMRole": "AWSReservedSSO_Services.User_c183f8d6586405a0",
              "custodian-owner": "aravind.ar@mongodb.com",
              "expire-on": "2023-08-22"
            },
            "tags_all": {
              "Name": "tf-om-node-1",
              "OwnerContact": "aravind.ar@mongodb.com",
              "WhatIsThis": "https://wiki.corp.mongodb.com/display/SEC/Auto+Tagging",
              "creationTime": "2023-08-20T07:20:27Z",
              "creator": "aravind.ar@mongodb.com",
              "creatorIAMRole": "AWSReservedSSO_Services.User_c183f8d6586405a0",
              "custodian-owner": "aravind.ar@mongodb.com",
              "expire-on": "2023-08-22"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-047cac52fac803def"
            ]
          },
          "dependencies": [
            "aws_security_group.om-sec-grp",
            "aws_subnet.om-vpc-subnet",
            "aws_vpc.om-vpc",
            "data.aws_ami.om-ami",
            "data.aws_availability_zones.om-vpc-azs",
            "data.aws_key_pair.om-key-pair"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0136ddddd07f0584f",
            "arn": "arn:aws:ec2:eu-west-1:331472312345:instance/i-042f2b0ba5a757d11",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdb",
                "encrypted": false,
                "iops": 1000,
                "tags": {
                  "name": "xvdb"
                },
                "throughput": 0,
                "volume_id": "vol-0d006866011235dc5",
                "volume_size": 25,
                "volume_type": "io2"
              },
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdc",
                "encrypted": false,
                "iops": 1000,
                "tags": {
                  "name": "xvdc"
                },
                "throughput": 0,
                "volume_id": "vol-09d3da373e075e157",
                "volume_size": 25,
                "volume_type": "io2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-042f2b0ba5a757d11",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "r5.large",
            "ipv6_address_count": 0,
            "key_name": "aravind",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01026579d55462dcb",
            "private_dns": "ip-192-168-0-37.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.37",
            "public_dns": "ec2-34-253-24-225.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.253.24.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05a3bf13aac242617",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06771ff5f50f43ef4",
            "tags": {
              "Name": "tf-om-node-2",
              "OwnerContact": "aravind.ar@mongodb.com",
              "WhatIsThis": "https://wiki.corp.mongodb.com/display/SEC/Auto+Tagging",
              "creationTime": "2023-08-20T07:20:26Z",
              "creator": "aravind.ar@mongodb.com",
              "creatorIAMRole": "AWSReservedSSO_Services.User_c183f8d6586405a0",
              "custodian-owner": "aravind.ar@mongodb.com",
              "expire-on": "2023-08-22"
            },
            "tags_all": {
              "Name": "tf-om-node-2",
              "OwnerContact": "aravind.ar@mongodb.com",
              "WhatIsThis": "https://wiki.corp.mongodb.com/display/SEC/Auto+Tagging",
              "creationTime": "2023-08-20T07:20:26Z",
              "creator": "aravind.ar@mongodb.com",
              "creatorIAMRole": "AWSReservedSSO_Services.User_c183f8d6586405a0",
              "custodian-owner": "aravind.ar@mongodb.com",
              "expire-on": "2023-08-22"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-047cac52fac803def"
            ]
          },
          "dependencies": [
            "aws_security_group.om-sec-grp",
            "aws_subnet.om-vpc-subnet",
            "aws_vpc.om-vpc",
            "data.aws_ami.om-ami",
            "data.aws_availability_zones.om-vpc-azs",
            "data.aws_key_pair.om-key-pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "om-vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].provider",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:331472312345:internet-gateway/igw-03ddc9ae5895067f5",
            "id": "igw-03ddc9ae5895067f5",
            "owner_id": "331472312345",
            "vpc_id": "vpc-017933b15109392e6"
          },
          "dependencies": [
            "aws_vpc.om-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "om-vpc-main-rtbl-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].provider",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00568b080086a6697",
            "original_route_table_id": "rtb-09b5db26d315da6cc",
            "route_table_id": "rtb-03d4be1346792adec",
            "vpc_id": "vpc-017933b15109392e6"
          },
          "dependencies": [
            "aws_internet_gateway.om-vpc-igw",
            "aws_route_table.om-vpc-main-rtbl",
            "aws_vpc.om-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "om-vpc-main-rtbl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].provider",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:331472312345:route-table/rtb-03d4be1346792adec",
            "id": "rtb-03d4be1346792adec",
            "owner_id": "331472312345",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ddc9ae5895067f5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "om-vpc-main-rtbl"
            },
            "tags_all": {
              "Name": "om-vpc-main-rtbl"
            },
            "timeouts": null,
            "vpc_id": "vpc-017933b15109392e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.om-vpc-igw",
            "aws_vpc.om-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "om-vpc-subnet-rtbl-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].provider",
      "instances": [
        {
          "index_key": "eu-west-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d00b40d1ce283d2f",
            "route_table_id": "rtb-03d4be1346792adec",
            "subnet_id": "subnet-02fa96ca117435842"
          },
          "dependencies": [
            "aws_internet_gateway.om-vpc-igw",
            "aws_route_table.om-vpc-main-rtbl",
            "aws_subnet.om-vpc-subnet",
            "aws_vpc.om-vpc",
            "data.aws_availability_zones.om-vpc-azs"
          ]
        },
        {
          "index_key": "eu-west-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba939666147142d0",
            "route_table_id": "rtb-03d4be1346792adec",
            "subnet_id": "subnet-0582c4c9bcedd327c"
          },
          "dependencies": [
            "aws_internet_gateway.om-vpc-igw",
            "aws_route_table.om-vpc-main-rtbl",
            "aws_subnet.om-vpc-subnet",
            "aws_vpc.om-vpc",
            "data.aws_availability_zones.om-vpc-azs"
          ]
        },
        {
          "index_key": "eu-west-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057fb133c7c3c9732",
            "route_table_id": "rtb-03d4be1346792adec",
            "subnet_id": "subnet-06771ff5f50f43ef4"
          },
          "dependencies": [
            "aws_internet_gateway.om-vpc-igw",
            "aws_route_table.om-vpc-main-rtbl",
            "aws_subnet.om-vpc-subnet",
            "aws_vpc.om-vpc",
            "data.aws_availability_zones.om-vpc-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "om-sec-grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].provider",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:331472312345:security-group/sg-047cac52fac803def",
            "description": "Security Group for Ops Manager",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047cac52fac803def",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "tf-om-sec-grp",
            "name_prefix": "",
            "owner_id": "331472312345",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-017933b15109392e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.om-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "om-vpc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].provider",
      "instances": [
        {
          "index_key": "eu-west-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:331472312345:subnet/subnet-02fa96ca117435842",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fa96ca117435842",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331472312345",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-017933b15109392e6"
          },
          "dependencies": [
            "aws_vpc.om-vpc",
            "data.aws_availability_zones.om-vpc-azs"
          ]
        },
        {
          "index_key": "eu-west-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:331472312345:subnet/subnet-0582c4c9bcedd327c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0582c4c9bcedd327c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331472312345",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-017933b15109392e6"
          },
          "dependencies": [
            "aws_vpc.om-vpc",
            "data.aws_availability_zones.om-vpc-azs"
          ]
        },
        {
          "index_key": "eu-west-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:331472312345:subnet/subnet-06771ff5f50f43ef4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.0.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06771ff5f50f43ef4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331472312345",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-017933b15109392e6"
          },
          "dependencies": [
            "aws_vpc.om-vpc",
            "data.aws_availability_zones.om-vpc-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "om-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].provider",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:331472312345:vpc/vpc-017933b15109392e6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/20",
            "default_network_acl_id": "acl-0b4126e3cef437034",
            "default_route_table_id": "rtb-09b5db26d315da6cc",
            "default_security_group_id": "sg-032d84eee6d385ad7",
            "dhcp_options_id": "dopt-85cc43e0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-017933b15109392e6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09b5db26d315da6cc",
            "owner_id": "331472312345",
            "tags": {
              "Name": "tf-om-vpc"
            },
            "tags_all": {
              "Name": "tf-om-vpc"
            }
          }
        }
      ]
    }
  ]
}